# llm-fingerprint-daily

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  pyproject.toml  quickstart.md
.claude/.superpowers/2026-04-14-llm-fingerprint/: plan.md  spec.md
.claude/tracers/batch-20260415-093000-src-runtime-audit/: batch-tracer.md  fix-plan.md
.github/workflows/: docker-build.yml
docs/superpowers/plans/: 2026-04-14-llm-fingerprint-daily.md
docs/superpowers/specs/: 2026-04-14-analysis-pipeline-fix-design.md  2026-04-14-llm-fingerprint-daily-design.md
probes/: coding_backend.json  coding_frontend.json  consistency.json  instruction.json  statistical.json  style_open.json
src/: cli_service.py  main.py
src/analysis/: _constraint.py  analyzer.py  behavior.py  capability.py  metadata.py  similarity.py  statistical.py
src/config/: loader.py  schema.py
src/engine/: llm_gateway.py  orchestrator.py  provider_runner.py  storage.py  target_runner.py
src/probe/: loader.py  schema.py
src/report/: generator.py
src/scheduler/: core.py
templates/: report.html
tests/: test_analyzer.py  test_behavior.py  test_capability.py  test_cli.py  test_config_loader.py  test_config_schema.py  test_e2e.py  test_llm_gateway.py  test_metadata.py  test_orchestrator.py  test_probe_loader.py  test_report.py  test_scheduler.py  test_similarity.py  test_statistical.py  test_storage.py  test_target_runner.py
